# tegla

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  format.sh
include/TeglaClient/: App.h
include/TeglaCore/: Core.h  ScriptingCore.h
include/TeglaServer/: Core.h  NetworkServer.h
include/TeglaServer/Game/: World.h
src/: drawingarea.c  drawingarea.h  main.c  server_main.c
src/TeglaClient/: App.cpp  CMakeLists.txt  main.cpp
src/TeglaCore/: CMakeLists.txt  ScriptingCore.cpp  core.cpp
src/TeglaServer/: CMakeLists.txt  NetworkServer.cpp  main.cpp
src/TeglaServer/Game/: World.cpp
