cmake_minimum_required(VERSION 3.16)
project(Tegla LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(vendor)

# subprojects
add_subdirectory(src/TeglaCore)
add_subdirectory(src/TeglaClient)
add_subdirectory(src/TeglaServer)